[gd_scene load_steps=5 format=2]

[ext_resource path="res://Audio/breakbeat.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scenes/music.gd" type="Script" id=2]
[ext_resource path="res://Audio/track2.mp3" type="AudioStream" id=3]
[ext_resource path="res://Audio/level3.mp3" type="AudioStream" id=4]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -221, 77 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Track2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Track3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="finished" from="Track1" to="." method="_on_Track1_finished"]
[connection signal="finished" from="Track2" to="." method="_on_Track2_finished"]
[connection signal="finished" from="Track3" to="." method="_on_Track3_finished"]
